--- a/public_html/user/connUser.css
+++ b/public_html/user/connUser.css
@@ -4,22 +4,32 @@
 	align-items:center;
 }
 
+	body{
+		display:flex;
+		flex-direction:column;
+		}
+
+#container{
+	flex: 1;
+}
+	
 footer {
 	margin:0px;
 	padding:0px;
     background-color: #537FE7;
     color: rgba(188, 207, 214, 0.925);
-    position:fixed;
     bottom: 0;
 	width : 100%;
 	height: 10%;
 	padding-bottom:2%;
-	padding-top:1%;}
+	padding-top:1%;
+	display:flex;
+	align-items:center;
+	justify-content: space-between;
+}
 
 #div-image-univsmb{
-position: absolute;
-	top:0;
-	right:0;
+
 }	
 	
 #image-univsmb{
