--- a/public_html/css/page404.css
+++ b/public_html/css/page404.css
@@ -3,10 +3,19 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
-	background-image:url("../images/amoogus.gif");
 }
 
 #container p{
     font-family: 'Bizarre', sans-serif;
-    font-size: 30px;
+    font-size: 1.4em;
+    color: black;
+}
+
+#text-container{
+    border: 1px solid black;
+    border-radius: 10px;
+    background-color: #ccc;
+    text-align: center;
+    padding: 30px;
+    opacity: 0.8;
 }
