--- a/public_html/css/page404.css
+++ b/public_html/css/page404.css
@@ -3,19 +3,28 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 #container p{
     font-family: 'Bizarre', sans-serif;
     font-size: 1.4em;
-    color: black;
+}
+
+#oups-error{
+    color: red;
 }
 
 #text-container{
-    border: 1px solid black;
+    border: none;
     border-radius: 10px;
-    background-color: #ccc;
+    background-color: #E9F8F9;
     text-align: center;
-    padding: 30px;
+    padding: 20px;
     opacity: 0.8;
+    max-width: 350px;
+    box-shadow: 0 3px 10px #537fe7;
 }
