--- a/public_html/css/default.css
+++ b/public_html/css/default.css
@@ -19,25 +19,33 @@ nav {
     font-size: larger;
     justify-content: space-between;
     display: flex;
-    padding: 25px;
+    padding: 30px;
     align-items: center;
+    margin: auto;
+    padding: auto;
 }
 
+.nav-title h1,.nav-header-buttons,.nav-title{
+    margin:auto;
+    padding:0;
+}
 .nav-title a{
+    left: 10px;
+    margin:  0;
+    padding: 30px 15px;
     transition: background-color 0.3s;
     text-decoration: none;
     align-items: center;
-    color: whitesmoke;
+    color: rgba(245, 245, 245, 0.945);
     
 }
 .nav-header-buttons a {
-    left: 10px;
+
     align-items: center;
     color: white;
     text-decoration: none;
     margin:  0;
-    padding: 54px 20px;
-    background-color: #1550bd;
+    padding: 30px 15px;
     border: none;
     transition: background-color 0.3s;
 }
@@ -58,7 +66,7 @@ nav a:hover {
     background-color: #2020ff;
 }
 .nav-title a:hover{
-    background-color: #1818ca;
+    background-color: #2020ff;
 }
 #container{
     flex: 1;
