--- a/public_html/css/mes_toiles.css
+++ b/public_html/css/mes_toiles.css
@@ -14,3 +14,64 @@
     max-width: 85%;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
+
+/* 
+==========================
+INFORMATIONS
+==========================
+*/
+
+#header_part1 h1{
+    color: #1550bd;
+    margin: 0 0 10px 0;
+    font-size: 2em;
+}
+
+#header_part1 p{
+    color: #555;
+    margin: 0;
+    font-size: 1.2em;
+    line-height: 1.4;
+}
+
+.mes_toiles_create{
+    display: inline-block;
+    background-color: #2fc133;
+    color: white;
+    padding: 10px 25px;
+    text-decoration: none;
+    border-radius: 25px;
+    font-weight: 600;
+    margin-top: 20px;
+    box-shadow: 0 2px 5px rgba(80, 181, 84, 0.3);
+    transition: all 0.5s ease;
+}
+
+.mes_toiles_create:hover {
+    background-color: #249128;
+    transform: scale(1.05);
+    box-shadow: 0 4px 8px rgba(71, 160, 74, 0.4);
+}
+
+#header_part2{
+    background-color: #e2fdff;
+    padding: 20px;
+    border-radius: 10px;
+    margin-left: 30px;
+    text-align: center;
+    min-width: 200px;
+    box-shadow: 0 4px 8px rgba(159, 226, 255, 0.4);
+}
+
+.nb_toiles{
+    font-size: 3em;
+    font-weight: 700;
+    color: #1550bd;
+    margin: 5px 0;
+}
+
+.txt_nb_toiles{
+    font-size: 1.4em;
+    color: #666;
+    line-height: 0;
+}
