--- a/public_html/css/default.css
+++ b/public_html/css/default.css
@@ -13,7 +13,7 @@ header {
     margin: 0;
 }
 
-nav{
+nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -26,18 +26,20 @@ nav{
     margin-left: 20px;
 }
 
-.nav-header-buttons{
+.nav-header-buttons {
     flex: 2;
     display: flex;
     justify-content: center;
 }
 
-.connection{
+.connection {
     flex: 1;
     text-align: right;
 }
 
-.nav-title a, .nav-header-buttons a, .connection a{
+.nav-title a,
+.nav-header-buttons a,
+.connection a {
     color: white;
     text-decoration: none;
     padding: 30px;
@@ -45,34 +47,36 @@ nav{
     font-size: 1.4em;
 }
 
-.nav-title a:hover, .nav-header-buttons a:hover, .connection a:hover{
+.nav-title a:hover,
+.nav-header-buttons a:hover,
+.connection a:hover {
     background-color: #2020ff;
 }
 
-#container{
+#container {
     flex: 1;
 }
-	
+
 footer {
-	margin:0px;
-	padding:0px;
+    margin: 0px;
+    padding: 0px;
     background-color: #537FE7;
     color: rgba(188, 207, 214, 0.925);
-	width: 100%;
-	display:flex;
-	align-items:center;
-	justify-content: space-between;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
-	
-#image-univsmb{
-	height:9%;	
-	
+
+#image-univsmb {
+    height: 9%;
+
 }
 
-#div_droits{
-	display:flex;
-	flex-direction:column;
-	justify-content: center;
-	text-align:center;
+#div_droits {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
 }
