--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -51,7 +51,7 @@ ITEM TOILE : Affichage miniature
 .mini-toile-table {
     border-collapse: collapse;
     border: 1px solid #ddd;
-    box-shadow: 0 0 4px rgba(0,0,0,0.1);
+    box-shadow: 0 0 4px rgba(0, 0, 0, 0.1);
     width: 150px;
     height: 150px;
     table-layout: fixed;
