--- a/public_html/css/toile.css
+++ b/public_html/css/toile.css
@@ -1,6 +1,7 @@
 :root {
     /* Taille des pixels de dessin */
-    --pixel_dessin_size: 20px; /* Potentiellement adapter en js en fonction de la taille de la toile */
+    --pixel_dessin_size: 20px;
+    /* Potentiellement adapter en js en fonction de la taille de la toile */
 
     --palette_bg_color: #ffffff;
     --color_active: #2c3e50;
@@ -58,7 +59,8 @@ TOILE : Palette
 */
 
 .palette {
-    background-color: var(--palette_bg_color);;
+    background-color: var(--palette_bg_color);
+    ;
     border-radius: 5px;
     box-shadow: 0px 0px 3px #ddd;
     display: flex;
@@ -87,7 +89,8 @@ TOILE : Palette
     margin-top: 0.5em;
 }
 
-.select_color, .select_color_active {
+.select_color,
+.select_color_active {
     border: 2px solid #ddd;
     border-radius: 50%;
     cursor: pointer;
@@ -130,4 +133,3 @@ TOILE : Palette
 #button_save_toile:hover {
     background-color: var(--button_save_toile_hover);
 }
-
