--- a/public_html/lib/page404.css
+++ b/public_html/lib/page404.css
@@ -1,5 +1,8 @@
-body {background-color:#F6F1F1;
+body {
+    background-color: #F6F1F1;
 }
-h1 {background-color:#19A7CE;
-    margin:3px;
+
+h1 {
+    background-color: #19A7CE;
+    margin: 3px;
 }
