--- a/public_html/toile_edit/style.css
+++ b/public_html/toile_edit/style.css
@@ -1,6 +1,7 @@
 :root {
     /* Taille des pixels de dessin */
-    --pixel_dessin_size: 20px; /* Potentiellement adapter en js en fonction de la taille de la toile */
+    --pixel_dessin_size: 20px;
+    /* Potentiellement adapter en js en fonction de la taille de la toile */
 
     --palette_bg_color: #ffffff;
     --color_active: #2c3e50;
@@ -60,7 +61,8 @@ TOILE : Palette
 */
 
 .palette {
-    background-color: var(--palette_bg_color);;
+    background-color: var(--palette_bg_color);
+    ;
     border-radius: 5px;
     box-shadow: 0px 0px 3px #ddd;
     display: flex;
@@ -89,7 +91,8 @@ TOILE : Palette
     margin-top: 0.5em;
 }
 
-.select_color, .select_color_active {
+.select_color,
+.select_color_active {
     border: 2px solid #ddd;
     border-radius: 50%;
     cursor: pointer;
@@ -124,4 +127,3 @@ TOILE : Palette
 #button_reset_toile:hover {
     background-color: var(--button_reset_toile_hover);
 }
-
