--- a/public_html/css/default.css
+++ b/public_html/css/default.css
@@ -76,3 +76,27 @@ footer {
 	justify-content: center;
 	text-align:center;
 }
+
+.error-not-creator{
+    display: flex;
+    justify-content: center;
+    margin: 30px 0;
+}
+
+.error-not-creator-text{
+    display: flex;
+    justify-content: center;
+    background-color: #ffebee;
+    color: #cb3131;
+    border-left: 5px solid red;
+    padding: 20px 25px;
+    border-radius: 5px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    font-size: 2em;
+    text-align: center;
+}
+
+.error-not-creator strong{
+    font-weight: 700;
+    margin-right: 10px;
+}
