c'est bon le todo y fait chier

--- a/public_html/css/default.css
+++ b/public_html/css/default.css
@@ -122,3 +122,9 @@ textarea{
     margin-bottom: 10px;
     font-size: 0.95em;
 }
+
+.container-message{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
