--- a/public_html/css/form.css
+++ b/public_html/css/form.css
@@ -3,6 +3,7 @@
     justify-content: center;
     align-items: center;
     padding: 20px;
+	background-image:url("../images/background_form.jpg");
 }
 
 /* 
