--- a/public_html/css/page_user.css
+++ b/public_html/css/page_user.css
@@ -24,5 +24,41 @@
 	align-items:center;
 }
 .bouton_deconnexion{
-	background-color:black;
+	font:1.2rem "Fira Sans",sans-serif;
+	border-radius:10px;
+	border-color:black;
+	background-color:#FFFFFF;
+	height:30px;
+	width:200px;
+	transition: background-color,height,width 0.3s;
 }
+
+.bouton_deconnexion:hover{
+	background-color:#1550bd;
+	color:white;
+	height:30px;
+	width:215px;
+	border-color:blue;
+}
+
+.bouton_delet_user{
+	font:1.2rem "Fira Sans",sans-serif;
+	border-radius:10px;
+	border-color:black;
+	background-color:#FFFFFF;
+	height:30px;
+	width:150px;
+	transition: background-color,height,width 0.3s;
+}
+
+.bouton_delet_user:hover{
+	background-color:#FF3333;
+	color:#7F0000;
+	height:30px;
+	width:175px;
+	border-color:red;
+}
+
+/*#E5E5FF*/
+/*#74D0F1*/
+/*#B8CAEB*/
